[project]
name = "client-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.17",
    "streamlit>=1.45.1",
    "google-generativeai",
    "python-dotenv",
    "pandas",
    "requests",
    "psycopg2-binary",
    "sqlalchemy>=2.0.41",
    "fastapi>=0.115.14",
    "pydantic>=2.11.5",
    "mysql>=0.0.3",
    "aiohttp>=3.12.13",
    "mysql-connector-python>=9.3.0",
    "asyncpg>=0.30.0",
    "googlesearch-python>=1.3.0",
    "beautifulsoup4>=4.13.4",
    "selenium>=4.34.0",
    "webdriver-manager>=4.0.2",
    "ratelimit>=2.2.1",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "streamlit-option-menu>=0.4.0",
]
